# ChangeLog for sys-apps/less
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*less-444.ebuild (09 Jun 2011)

  09 Jun 2011; Martin Väth <martin@mvath.de>
  Bump less version. Remove old ebuild. Fix some typos concering env.d

*less-443.ebuild (06 Jun 2011)

  06 Jun 2011; Martin Väth <martin@mvath.de>
  -less-select-443.ebuild +less-443.ebuild
  Rename into less to avoid problems with portage hard-depending on less.
  In fact, less-select is just less with additional options which therefore
  should be provided by a useflag.

*less-select-443.ebuild (11 Apr 2011)

  11 Apr 2011; Martin Väth <martin@mvath.de>
  Bump less version. Remove old ebuild.

*less-select-441.ebuild (28 Feb 2011)

  29 Feb 2011; Martin Väth <martin@mvath.de>
  Bump less version. Remove old ebuild.

*less-select-440.ebuild (06 Jan 2011)

  04 Jan 2011; Martin Väth <martin@mvath.de>
  Bump less version. Remove old ebuild.

*less-select-438.ebuild (01 Jan 2011)

  04 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  01 Jan 2011; Martin Väth <martin@mvath.de> :
  Bump less version. Remove old ebuild.

*less-select-436-r1.ebuild (30 Mar 2010)

  12 Jun 2010; Martin Väth <martin@mvath.de> :
  Remove unneeded files/less.envd. Remove arches which I never tested.

  30 Mar 2010; Martin Väth <martin@mvath.de> :
  -less-select-436.ebuild +less-select-436-r1.ebuild files/lesspipe.sh:
  Update lesspipe.sh and related changes of sys-apps/less in portage tree.

  22 Jul 2009; Martin Väth <martin@mvath.de> :
  Version bump to less-select-436

  12 Apr 2009; Martin Väth <martin@mvath.de> :
  Version bump to less-select-429

  09 Feb 2009; Martin Väth <martin@mvath.de> :
  Version bump to less-select-424

  04 Jan 2008; Martin Väth <martin@mvath.de> :
  Version bump to less-select-418

  29 Nov 2007; Martin Väth <martin@mvath.de> :
  Version bump to less-select-416

  16 Nov 2007; Martin Väth <martin@mvath.de> :
  Version bump to less-select-415
