@@ -1,3 +1,3 @@
 DIST code2color 199875 RMD160 378d340a20c3fe500f19116220d54816fe279225 SHA1 b30526dd52c747b8bd6dcf53cf5cc94824c47feb SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d
-DIST less-444.tar.gz 307308 RMD160 3ae4bac91a786af638eb07a6b63c85c31db7c829 SHA1 2a10860360a98c07353bbd5b28ec7477af3ec8a4 SHA256 be64ad3e22d6d4aa19fe7024d998563a1ce1671ee3625f8851d26b16dedcdeeb
+DIST less-445.tar.gz 307824 RMD160 dbd23a0a0890a89a42c71d6092f3545cb2bc529c SHA1 120c179ab5927bed4ebcda6541082889fed73311 SHA256 66254dbd8142a90821968df249b4e268f53997cb12755d2a7116174b1a35a8bd
 DIST less-select-patch-436.tar.gz 47383 RMD160 5ccbe853d1f6ce5940f283bd8265ce8b75e20363 SHA1 21f3f8b16be8cd0724820c167d6f685d236cec36 SHA256 bbdd0ee9241803b8de719c358090354bde63472d1df6db271a50be51bfc800f3
